# reth

./: README.md
crates/blockchain-tree/src/: blockchain_tree.rs  canonical_chain.rs  chain.rs  externals.rs
crates/engine/tree/src/tree/: mod.rs
crates/ethereum/node/src/: launch.rs  node.rs
crates/evm/execution-types/src/: chain.rs
crates/exex/exex/src/backfill/: job.rs  stream.rs  test_utils.rs
crates/net/discv4/src/: lib.rs
crates/net/downloaders/src/: file_client.rs
crates/net/eth-wire/src/: capability.rs
crates/node/api/src/: node.rs
crates/node/builder/src/: node.rs  rpc.rs
crates/node/builder/src/builder/: add_ons.rs  mod.rs  states.rs
crates/node/builder/src/launch/: mod.rs
crates/optimism/node/: Cargo.toml
crates/optimism/node/src/: node.rs
crates/optimism/rpc/: Cargo.toml
crates/optimism/rpc/src/eth/: block.rs  call.rs  mod.rs  pending_block.rs  receipt.rs  transaction.rs
crates/primitives-traits/src/: request.rs
crates/prune/prune/src/segments/: receipts.rs
crates/prune/prune/src/segments/user/: receipts_by_logs.rs  sender_recovery.rs  transaction_lookup.rs
crates/rpc/rpc-builder/src/: lib.rs
crates/rpc/rpc-eth-api/: Cargo.toml
crates/rpc/rpc-eth-api/src/: core.rs
crates/rpc/rpc-eth-api/src/helpers/: fee.rs  mod.rs  rpc.rs  transaction.rs
crates/rpc/rpc-eth-types/src/: fee_history.rs  simulate.rs
crates/rpc/rpc/src/: debug.rs
crates/rpc/rpc/src/eth/: core.rs  filter.rs
crates/rpc/rpc/src/eth/helpers/: signer.rs  transaction.rs
crates/stages/api/src/pipeline/: builder.rs
crates/stages/stages/src/stages/: bodies.rs
crates/storage/codecs/: Cargo.toml
crates/storage/codecs/src/: error.rs  lib.rs
crates/storage/codecs/src/alloy/: access_list.rs  log.rs
crates/storage/db/: Cargo.toml
crates/storage/db-api/: Cargo.toml
crates/storage/db-api/src/: table.rs
crates/storage/db-api/src/models/: accounts.rs  blocks.rs  mod.rs
crates/storage/db-common/: Cargo.toml
crates/storage/db-models/src/: accounts.rs  blocks.rs  lib.rs  sharded_key.rs
crates/storage/errors/: Cargo.toml
crates/storage/libmdbx-rs/: Cargo.toml
crates/storage/nippy-jar/: Cargo.toml
crates/storage/nippy-jar/src/compression/: zstd.rs
crates/storage/provider/: Cargo.toml
crates/storage/provider/src/providers/: blockchain_provider.rs
crates/storage/provider/src/providers/static_file/: manager.rs
crates/storage/storage-api/: Cargo.toml
crates/transaction-pool/benches/: truncate.rs
examples/beacon-api-sidecar-fetcher/src/: mined_sidecar.rs
