[package]
name = "reth-storage-errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.unnameable-types = "warn"

[dependencies]
reth-primitives.workspace = true
reth-fs-util.workspace = true

thiserror-no-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["thiserror-no-std/std"]