[package]
name = "reth-libmdbx"
description = "Idiomatic and safe MDBX wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.unnameable-types = "warn"

[dependencies]
reth-mdbx-sys.workspace = true

bitflags.workspace = true
byteorder = "1"
derive_more.workspace = true
indexmap = "2"
parking_lot.workspace = true
thiserror.workspace = true
dashmap = { workspace = true, features = ["inline"], optional = true }
tracing.workspace = true

[features]
default = []
return-borrowed = []
read-tx-timeouts = ["dashmap", "dashmap/inline"]

[dev-dependencies]
pprof = { workspace = true, features = [
    "flamegraph",
    "frame-pointer",
    "criterion",
] }
criterion.workspace = true
rand.workspace = true
rand_xorshift = "0.3"
tempfile.workspace = true

[[bench]]
name = "cursor"
harness = false

[[bench]]
name = "transaction"
harness = false
