[package]
name = "reth-nippy-jar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Immutable data store format"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.unnameable-types = "warn"

[lib]
name = "reth_nippy_jar"

[dependencies]
# reth
reth-fs-util.workspace = true

# filter
ph = "0.8.0"
cuckoofilter = { version = "0.5.0", features = [
    "serde_support",
    "serde_bytes",
] }

# compression
zstd = { workspace = true, features = ["experimental", "zdict_builder"] }
lz4_flex = { version = "0.11", default-features = false }

# offsets
sucds = "~0.8"

memmap2 = "0.9.4"
bincode = "1.3"
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
anyhow = "1.0"
thiserror.workspace = true
derive_more.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["small_rng"] }
tempfile.workspace = true


[features]
default = []
test-utils = []
