[package]
name = "reth-storage-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Reth storage provider traits and types"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.unnameable-types = "warn"

[dependencies]
# reth
reth-chainspec.workspace = true
reth-execution-types.workspace = true
reth-db-api.workspace = true
reth-primitives.workspace = true
reth-prune-types.workspace = true
reth-stages-types.workspace = true
reth-storage-errors.workspace = true
reth-trie.workspace = true

revm.workspace = true

auto_impl.workspace = true
